# beat-snp500

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  daily.yml
app/: streamlit_app.py
data/: ff5_factors.parquet  membership.parquet
data/outputs/: holdings_challenger.json  holdings_champion.json  holdings_kmeans.json  holdings_lgbm.json  leaderboard_challenger.json  leaderboard_champion.json  leaderboard_kmeans.json  leaderboard_lgbm.json  live_track.parquet  membership_status.json  validation.json
data/outputs/backtest/: bootstrap.parquet  bootstrap_summary.json  equity_curves.parquet  ic_monthly.parquet  metrics.json  picks.json  (+1 more)
docs/learning/: 01-experiment-tracking-mlflow.md
improvement/: improve_v1.md  improve_v2.md
mlruns/832580556589764010/: meta.yaml
mlruns/876385905758634818/: meta.yaml
models/: champion_202606.txt  mlflow_registry.db  registry.json
notebooks/: quantitative_investment_strategy.ipynb
scripts/: evaluate_features.py  migrate_model_names.py  migrate_registry_to_mlflow.py  promote_model.py  run_backtest.py  run_daily.py  sanity_check_cluster_momentum.py  sanity_check_feature_ic.py  sanity_check_linear.py  tune_kmeans.py
src/beat_snp500/: config.py  io_utils.py  tracking.py
tests/: conftest.py  test_advanced_features.py  test_app_smoke.py  test_backtest_report.py  test_betas.py  test_bootstrap.py  test_challenger.py  test_champion.py  test_daily.py  test_engine.py  test_factors.py  test_io_utils.py  test_kmeans.py  test_lgbm.py  test_membership.py  test_metrics.py  test_migrate.py  test_migrate_registry.py  test_monthly.py  test_pipeline_leakage.py  test_prices.py  test_promote_model.py  test_registry.py  test_technical.py  test_tracking.py  test_validation.py  test_weights.py  test_workflows.py
(+78 files in other folders)
