[project]
name = "beat-snp500"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2,<3.0",
    "numpy>=1.26",
    "yfinance>=0.2.40",
    "pandas-datareader>=0.10",
    "statsmodels>=0.14",
    "scikit-learn>=1.4",
    "lightgbm>=4.3",
    "PyPortfolioOpt>=1.5.5",
    "pyarrow>=15",
    "requests>=2.31",
    "lxml>=5.1",
    "plotly>=5.20",
    "streamlit>=1.33",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pyyaml>=6"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
# src on sys.path directly: the editable-install .pth gets UF_HIDDEN re-stamped
# by the local sandbox and Python 3.13 skips hidden .pth files
pythonpath = ["src"]
